# libretor-cmake

./: CMakeLists.txt
examples/: CMakeLists.txt  libretro_rendering.c
